# ChangeLog for media-video/camserv
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/camserv/ChangeLog,v 1.24 2011/02/26 19:20:33 signals Exp $

  26 Feb 2011; Kevin McCarthy <signals@gentoo.org> camserv-0.5.1-r2.ebuild:
  Updated depends from media-libs/jpeg to virtual/jpeg

  02 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  camserv-0.5.1-r2.ebuild:
  No longer force automake 1.6; this allows the package to be built with
  libtool-2.4

  26 Nov 2009; Markus Meier <maekke@gentoo.org> camserv-0.5.1-r2.ebuild:
  amd64 stable, bug #287170

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  camserv-0.5.1-r2.ebuild:
  media-libs/imlib2 is required, not media-libs/imlib.

  22 Jan 2008; Samuli Suominen <drac@gentoo.org>
  +files/camserv-0.5.1-libtool.patch, +files/camserv-0.5.1-memcpy.patch,
  camserv-0.5.1-r2.ebuild:
  Attempt to fix broken libtool handling wrt #188149.

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org>
  camserv-0.5.1-r2.ebuild:
  Fixed quoting.

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  08 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  camserv-0.5.1-r2.ebuild:
  Recreate all the autotools support, use eautoreconf that takes care of
  running the tools on libltdl, too. Should fix bug #106013.

  02 Sep 2005; Diego Pettenò <flameeyes@gentoo.org>
  camserv-0.5.1-r2.ebuild:
  Fix dependencies: autoconf is not a runtime dep. Use eautoconf from
  autotools eclass. Use newinitd.

  26 Nov 2004; Chris White <chriswhite@gentoo.org> -camserv-0.5.0.ebuild:
  Old ebuild cleanup.

  13 Aug 2004; Chris White <chriswhite@gentoo.org> +metadata.xml:
  Adding missing metadata.xml.

  05 Jul 2004; David Holm <dholm@gentoo.org> camserv-0.5.1-r2.ebuild:
  Added to ~ppc.

  11 Jun 2004; Mike Frysinger <vapier@gentoo.org> camserv-0.5.0.ebuild,
  -camserv-0.5.1-r1.ebuild, camserv-0.5.1-r2.ebuild, -camserv-0.5.1.ebuild: