@@ -1,8 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX camserv-0.5-errno.patch 3105 RMD160 f6722b8eb4568bae063acffd44f09ea6d2f80aec SHA1 5abaffdc05c721e987f4c0c383118bb6f69c9349 SHA256 b5ac3c1de498c7ab5595708544d66b84e48d4759a3354b1f648851ee02a45357
 AUX camserv-0.5.1-libtool.patch 2936 RMD160 d88a835753194167cd91d6c9482a8ed9c94f1a90 SHA1 272bf97dfabc8a165e522d4794759936a714ae0c SHA256 8890596b0f7f659908185adb967abde87cbb499ae90f2c988fdcbd320cd52be3
 AUX camserv-0.5.1-memcpy.patch 382 RMD160 db3d8fcf080bf32051701444d3589cb859162484 SHA1 15eb11db8b4233a5dc60fce9c21bb8f927f0a15b SHA256 6c105afe1f44fed8717dd095866bb3104938c3a5bb0f56a87dfbba2f7fe76132
 AUX camserv.init 553 RMD160 892e90e073c20615ac44f4f4be679ebae54147b9 SHA1 b1a5a9342d46d78556fccac66e839b4a264375e6 SHA256 f0abc4ef202d1bc24acfba85103e46b4aba3712a3f39bdd6a4558199d0163fb1
 DIST camserv-0.5.1.tar.gz 487645 RMD160 053f54f96cbb387f8657a424ab5775d158cd80ba SHA1 660e3aa127a042c9be3dd9ec768098834e6dce06 SHA256 034c08aac228587a1c46d35e345e1be653f5149bb4648b3e5ef937ccd5e5b24f
-EBUILD camserv-0.5.1-r2.ebuild 998 RMD160 14696eaca49922a74308e9aae269b2e436cded28 SHA1 1425491e0893a1ac90009fb1ace38a993bb4ec82 SHA256 f8e4dac727042760fccaa7bfde0794fb2255fec1c6a13ae22298a88dfdd11baf
-MISC ChangeLog 3627 RMD160 556dbc9698cf25730a9d40d96f6938b33fe8d6e8 SHA1 01b6015c30eba7c6a0297f1ca4a95291ab1ff36d SHA256 52ab7e61d598ca69986e408fd2614141512174deb269545d996623a35dee715d
+EBUILD camserv-0.5.1-r2.ebuild 1128 RMD160 fb8e7fa9aff653573df95b29fb2e4be9bc44b169 SHA1 63f44396183d72252e9d69a9a665c0482667e343 SHA256 f7c962d9f413202fd04c70164308e6befcae54e782067b86a54f8f8205029539
+MISC ChangeLog 3854 RMD160 35453a0ad169b5fdfb1c604a01a4478a0a4d4cb7 SHA1 f87a19fef5836ad329b6333ba6943c39d3bc1b31 SHA256 9ade76a725b0c3b7f4e1511b41ec796519de5d64a8ba19c206332e35d83c84b0
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPva3vAAoJEEdUh39IaPFNdvsH/3c/76Xj4D7IzGksJd28/8Nq
+MDVHUXfU2CrQOCQdqsWKYQIiRTF03g2rqO36TlQnMeqwZiIgroN/jyCjPaQgbiCa
+QT+pQ7jml/4CU2RYAlu5t5B8EBbhc0i4Y2lrAe7c58DrqJ/iLnbER3tkV/Dm+9CX
+yhzFFk/MMzOCI6KCHs4cNXq/J3+tcOWvtdiO61uiQ+O6SShH0Q6rPtJAj28IbCUS
+s1/mDEdQAVjLX1wGtTBNR1fmFTWUOjPlAwhWYwCirlXJ+WolHbeN8aoYzs9KDWi7
+pJ1KJFrdxvk0HAjcHK4WZA6hbEO3GuME+ebgLrUfKTqV/yJO2hXolmAohgRk14A=
+=lSfl
+-----END PGP SIGNATURE-----
