@@ -1,6 +1,10 @@
 # ChangeLog for media-video/camserv
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/camserv/ChangeLog,v 1.24 2011/02/26 19:20:33 signals Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/camserv/ChangeLog,v 1.25 2012/05/24 03:41:30 ssuominen Exp $
+
+  24 May 2012; Samuli Suominen <ssuominen@gentoo.org> camserv-0.5.1-r2.ebuild:
+  Use libv4l1-videodev.h from media-libs/libv4l to build libvideo_v4l.so
+  because linux-headers don't ship linux/videodev.h anymore wrt #396635
 
   26 Feb 2011; Kevin McCarthy <signals@gentoo.org> camserv-0.5.1-r2.ebuild:
   Updated depends from media-libs/jpeg to virtual/jpeg
